feat: add weatherNotify command
Done: add database logic
TODO: add notification using scheduler

--- a/All-In-One Bot/src/locales/en.yaml
+++ b/All-In-One Bot/src/locales/en.yaml
@@ -35,3 +35,11 @@ placesFound: |
 
 noPlacesFound: |
   No places found!
+
+weatherNotifications: |
+  <b>Your weather notifications:</b>
+
+  ${notifications}
+
+noWeatherNotifications: >
+  You don't have any weather notifications!
