feat: add task management without notifications

--- a/All-In-One Bot/src/locales/en.yaml
+++ b/All-In-One Bot/src/locales/en.yaml
@@ -43,3 +43,11 @@ weatherNotifications: |
 
 noWeatherNotifications: >
   You don't have any weather notifications!
+
+tasks: |
+  <b>Your tasks:</b>
+
+  ${tasks}
+
+noTasks: >
+  You don't have any tasks!
